--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Matt Chupp",
   "dependencies": {
     "gatsby": "^2.1.22",
     "gatsby-image": "^2.0.31",
@@ -16,7 +16,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "uikit": "^3.0.3"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
