--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "Sons-and-Daughters",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Sons and Daughters Conference",
   "version": "0.1.0",
   "author": "Matt Chupp",
   "dependencies": {
